Undo revision [[Special:Diff/1737591|1737591]] by [[Special:Contributions/Roy 043|Roy 043]] ([[User talk:Roy 043|talk]])

--- a/wiki/Macro_Parametric_Curve_FP.html
+++ b/wiki/Macro_Parametric_Curve_FP.html
@@ -82,7 +82,7 @@ Macro Parametric_Curve_FP
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Parametric_Curve_FP screenshot&lrm;</p>
 <h3><span class="mw-headline" id="Legend">Legend</span></h3>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
-<p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro">Macro</a></i>
+<p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py">Macro</a></i>
 </p>
 <div class="mw-collapsible-content">
 <pre>
@@ -98,7 +98,7 @@ diag = QtGui.QMessageBox(QtGui.QMessageBox.Information,
     "Information",
     "This macro must be downloaded from this link\n"
     "\n"
-    "https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro" + "\n"
+    "https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py" + "\n"
     "\n"
     "Quit this window to access the download page")
 
@@ -107,11 +107,11 @@ diag.setWindowModality(QtCore.Qt.ApplicationModal)
 diag.exec_()
 
 import webbrowser 
-webbrowser.open("https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro")
+webbrowser.open("https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py")
 </pre>
 </div>
 </div>
-<div style="display:none;">&lt;class="rawcodeurl"&gt;&lt;a href="<a rel="nofollow" class="external free" href="https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro">https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro</a>"&gt;raw code&lt;/a&gt;</div>
+<div style="display:none;">&lt;class="rawcodeurl"&gt;&lt;a href="<a rel="nofollow" class="external free" href="https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py">https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a/raw/7bf01aad67c3fb9033e02285bb58d95841a57143/Parametric_Curve_FP.py</a>"&gt;raw code&lt;/a&gt;</div>
 <p><br>
 ToolBar Icon
 <span class="mw-default-size" typeof="mw:File"><a href="index.php?title=Parametric_Curve_FP.svg&amp;filetimestamp=20210915224114&amp;.html" class="mw-file-description"><img src="File/Parametric_Curve_FP.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -121,39 +121,39 @@ ToolBar Icon
 </p>
 <div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
 <div style="border:1px outset #9eb4b5; background:#f0fdf8; margin:5px; padding:5px; white-space:nowrap; -webkit-border-radius: 5px; -moz-border-radius: 5px;">
-<p><span typeof="mw:File"><a href="https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro" rel="nofollow"><img src="File/Nuvola_apps_download_manager.png" decoding="async" width="35" height="35" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
-</p><p><span class="CodeDownload" style="font-weight:bold"><a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV2Objects.FCMacro">CSV2Objects.FCMacro</a></span>
+<p><span typeof="mw:File"><a href="https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a" rel="nofollow"><img src="File/Nuvola_apps_download_manager.png" decoding="async" width="35" height="35" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
+</p><p><span class="CodeDownload" style="font-weight:bold"><a rel="nofollow" class="external text" href="https://gist.github.com/mwganson/473920ad317fb2dc3e37638112874e2a">Parametric_Curve_FP.py</a></span>
 </p>
 </div>
 </div>
 
 <!-- 
 NewPP limit report
-Cached time: 20260112172436
+Cached time: 20260112172832
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.071 seconds
+CPU time usage: 0.051 seconds
+Real time usage: 0.065 seconds
 Preprocessor visited node count: 150/1000000
-Post&#8208;expand include size: 4605/2097152 bytes
-Template argument size: 1809/2097152 bytes
+Post&#8208;expand include size: 4688/2097152 bytes
+Template argument size: 2000/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2279/5000000 bytes
+Unstrip post&#8208;expand size: 2387/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.030      1 -total
- 29.81%    2.394      1 Template:Macro
- 19.54%    1.569      1 Template:Codeextralink
- 18.09%    1.453      1 Template:CodeDownload
- 14.99%    1.203      3 Template:Incode
- 12.39%    0.995      1 Template:Caption
+100.00%    6.491      1 -total
+ 25.67%    1.666      1 Template:Macro
+ 23.62%    1.533      1 Template:CodeDownload
+ 17.70%    1.149      1 Template:Codeextralink
+ 14.86%    0.965      3 Template:Incode
+ 12.96%    0.841      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:265038-0!canonical and timestamp 20260112172443 and revision id 1737591. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:265038-0!canonical and timestamp 20260112172834 and revision id 1737592. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
