Updated page Main Page/bg

--- a/wiki/bg/Main_Page.html
+++ b/wiki/bg/Main_Page.html
@@ -92,7 +92,7 @@
 <li>&#1087;&#1088;&#1077;&#1074;&#1077;&#1078;&#1076;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086; &#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103;&#1090;&#1072;</li>
 <li>&#1087;&#1086;&#1084;&#1072;&#1075;&#1072;&#1085;&#1077; &#1089; &#1086;&#1087;&#1072;&#1082;&#1086;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1085;&#1072;&#1081;-&#1085;&#1086;&#1074;&#1072;&#1090;&#1072; &#1074;&#1077;&#1088;&#1089;&#1080;&#1103; &#1085;&#1072; FreeCAD &#1079;&#1072; &#1083;&#1102;&#1073;&#1080;&#1084;&#1072;&#1090;&#1072; &#1074;&#1080; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1086;&#1085;&#1085;&#1072; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;</li>
 <li>&#1087;&#1086;&#1084;&#1072;&#1075;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1088;&#1091;&#1075;&#1080; &#1093;&#1086;&#1088;&#1072; &#1086;&#1082;&#1086;&#1083;&#1086; &#1074;&#1072;&#1089; &#1076;&#1072; &#1086;&#1090;&#1082;&#1088;&#1080;&#1103;&#1090; FreeCAD.</li></ul>
-<p>&#1057;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; <a href="../Special;MyLanguage/help_FreeCAD.html" title="Special:MyLanguage/help FreeCAD">help FreeCAD</a> &#1086;&#1087;&#1080;&#1089;&#1074;&#1072; &#1090;&#1086;&#1074;&#1072; &#1089; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1087;&#1086;&#1076;&#1088;&#1086;&#1073;&#1085;&#1086;&#1089;&#1090;&#1080;. &#1047;&#1072;&#1087;&#1086;&#1095;&#1074;&#1072;&#1081;&#1082;&#1080; &#1086;&#1090; 2016, FreeCAD &#1091;&#1095;&#1072;&#1089;&#1090;&#1074;&#1072; &#1089;&#1098;&#1097;&#1086; &#1080; &#1074; <a href="../Google_Summer_of_Code.html" class="mw-redirect" title="Google Summer of Code">Google Summer of Code</a>.
+<p>&#1057;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; <a href="../bg/Special;MyLanguage/help_FreeCAD.html" title="Special:MyLanguage/help FreeCAD/bg">&#1055;&#1086;&#1084;&#1086;&#1075;&#1085;&#1077;&#1090;&#1077; &#1085;&#1072; FreeCAD</a> &#1086;&#1087;&#1080;&#1089;&#1074;&#1072; &#1090;&#1086;&#1074;&#1072; &#1089; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1087;&#1086;&#1076;&#1088;&#1086;&#1073;&#1085;&#1086;&#1089;&#1090;&#1080;. &#1047;&#1072;&#1087;&#1086;&#1095;&#1074;&#1072;&#1081;&#1082;&#1080; &#1086;&#1090; 2016, FreeCAD &#1091;&#1095;&#1072;&#1089;&#1090;&#1074;&#1072; &#1089;&#1098;&#1097;&#1086; &#1080; &#1074; <a href="../Google_Summer_of_Code.html" class="mw-redirect" title="Google Summer of Code">Google Summer of Code</a>.
 </p><p><span id="Source_code"></span>
 </p>
 <h3><span id=".D0.9F.D1.80.D0.BE.D0.B3.D1.80.D0.B0.D0.BC.D0.B5.D0.BD_.D0.BA.D0.BE.D0.B4"></span><span class="mw-headline" id="&#1055;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1077;&#1085;_&#1082;&#1086;&#1076;">&#1055;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1077;&#1085; &#1082;&#1086;&#1076;</span></h3>
@@ -119,12 +119,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112172923
+Cached time: 20260112173150
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.179 seconds
+CPU time usage: 0.118 seconds
+Real time usage: 0.214 seconds
 Preprocessor visited node count: 186/1000000
 Post&#8208;expand include size: 5806/2097152 bytes
 Template argument size: 1905/2097152 bytes
@@ -135,13 +135,13 @@ Unstrip post&#8208;expand size: 4126/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.935      1 -total
- 77.03%    5.342      1 Template:Userdocnavi/bg
- 31.33%    2.173      1 Template:Navigation_menu_2
- 17.78%    1.233      5 Template:Clear
+100.00%   12.466      1 -total
+ 70.80%    8.826      1 Template:Userdocnavi/bg
+ 26.53%    3.307      1 Template:Navigation_menu_2
+ 22.81%    2.844      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77428-0!canonical and timestamp 20260112172923 and revision id 1737594. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77428-0!canonical and timestamp 20260112173150 and revision id 1737596. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
