--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -15,7 +15,7 @@
 <li><a href="../fi/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (4% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (10% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; centrum (8% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#1062;&#1077;&#1085;&#1090;&#1088; &#1087;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1081; (84% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -47,7 +47,6 @@
 <p><span id="Migrating_from_other_software?"></span>
 </p>
 <h3><span id=".D0.9C.D0.B8.D0.B3.D1.80.D0.B8.D1.80.D0.B0.D0.BD.D0.B5_.D0.BE.D1.82_.D0.B4.D1.80.D1.83.D0.B3_.D1.81.D0.BE.D1.84.D1.82.D1.83.D0.B5.D1.80.3F"></span><span class="mw-headline" id="&#1052;&#1080;&#1075;&#1088;&#1080;&#1088;&#1072;&#1085;&#1077;_&#1086;&#1090;_&#1076;&#1088;&#1091;&#1075;_&#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;?">&#1052;&#1080;&#1075;&#1088;&#1080;&#1088;&#1072;&#1085;&#1077; &#1086;&#1090; &#1076;&#1088;&#1091;&#1075; &#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;?</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../Workarounds.html" title="Workarounds">Workarounds</a></li>
 <li><a href="../Migrating_to_FreeCAD_from_Fusion360.html" title="Migrating to FreeCAD from Fusion360">Migrating to FreeCAD from Fusion360</a></li>
 <li><a href="../Migrating_to_FreeCAD_from_OnShape.html" title="Migrating to FreeCAD from OnShape">Migrating to FreeCAD from OnShape</a></li>
@@ -55,7 +54,6 @@
 <li><a href="../Migrating_to_FreeCAD_from_Revit.html" title="Migrating to FreeCAD from Revit">Migrating to FreeCAD from Revit</a></li>
 <li><a rel="nofollow" class="external text" href="https://yorik.uncreated.net/blog/2020-010-freecad-bim-guide">FreeCAD BIM migration guide</a></li>
 <li><a href="../BIM_application_compatibility_table.html" title="BIM application compatibility table">BIM applications compatibility table</a></li></ul>
-</div>
 <p><span id="Basic_application"></span>
 </p>
 <h3><span id=".D0.9E.D1.81.D0.BD.D0.BE.D0.B2.D0.BD.D0.B0_.D0.A3.D0.BF.D0.BE.D1.82.D1.80.D0.B5.D0.B1.D0.B0"></span><span class="mw-headline" id="&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1072;_&#1059;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;">&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1072; &#1059;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;</span></h3>
@@ -137,33 +135,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111220246
+Cached time: 20260112173450
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.238 seconds
-Preprocessor visited node count: 294/1000000
+CPU time usage: 0.098 seconds
+Real time usage: 0.172 seconds
+Preprocessor visited node count: 293/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4269/5000000 bytes
+Unstrip post&#8208;expand size: 4273/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.827      1 -total
- 40.25%    5.566      1 Template:Userdocnavi/bg
- 21.70%    3.001      2 Template:VersionMinus
- 20.88%    2.887      1 Template:Navigation_menu_2
-  9.03%    1.248      7 Template:Incode
-  8.65%    1.196      1 Template:TOCright
-  6.73%    0.930      3 Template:Version
-  5.74%    0.794      1 Template:Button
+100.00%   15.479      1 -total
+ 45.35%    7.020      1 Template:Userdocnavi/bg
+ 20.51%    3.175      1 Template:Navigation_menu_2
+ 11.74%    1.817      7 Template:Incode
+ 11.23%    1.739      1 Template:TOCright
+  9.29%    1.438      2 Template:VersionMinus
+  7.53%    1.165      3 Template:Version
+  6.78%    1.050      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111220246 and revision id 1735833. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260112173450 and revision id 1737598. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
