Updated page User hub/bg

--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -43,7 +43,7 @@
 <li><a href="../bg/Installing_additional_components.html" title="Installing additional components/bg">&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080;</a>: &#1050;&#1072;&#1082; &#1076;&#1072; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1090;&#1077; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1090;&#1088;&#1077;&#1090;&#1080; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1103;&#1090; &#1079;&#1072;&#1077;&#1076;&#1085;&#1086; &#1089; FreeCAD.</li>
 <li><a href="../bg/Getting_started.html" title="Getting started/bg">&#1055;&#1098;&#1088;&#1074;&#1080; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080;</a>: &#1041;&#1098;&#1088;&#1079; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1085;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
 <li><a href="../Frequently_asked_questions.html" title="Frequently asked questions">FAQ</a>: &#1063;&#1077;&#1089;&#1090;&#1086; &#1079;&#1072;&#1076;&#1072;&#1074;&#1072;&#1085;&#1080; &#1074;&#1098;&#1087;&#1088;&#1086;&#1089;&#1080;</li>
-<li><a href="../bg/Tutorials.html" title="Tutorials/bg">&#1059;&#1088;&#1086;&#1094;&#1080;</a> &#1087;&#1086;&#1082;&#1088;&#1080;&#1074;&#1072;&#1097;&#1080; &#1085;&#1072; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1095;&#1072;&#1089;&#1090;&#1080; &#1085;&#1072; FreeCAD</li></ul>
+<li><a href="../bg/Tutorials.html" title="Tutorials/bg">&#1059;&#1088;&#1086;&#1094;&#1080;</a> &#1087;&#1086;&#1082;&#1088;&#1080;&#1074;&#1072;&#1097;&#1080; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1095;&#1072;&#1089;&#1090;&#1080; &#1085;&#1072; FreeCAD</li></ul>
 <p><span id="Migrating_from_other_software?"></span>
 </p>
 <h3><span id=".D0.9C.D0.B8.D0.B3.D1.80.D0.B8.D1.80.D0.B0.D0.BD.D0.B5_.D0.BE.D1.82_.D0.B4.D1.80.D1.83.D0.B3_.D1.81.D0.BE.D1.84.D1.82.D1.83.D0.B5.D1.80.3F"></span><span class="mw-headline" id="&#1052;&#1080;&#1075;&#1088;&#1080;&#1088;&#1072;&#1085;&#1077;_&#1086;&#1090;_&#1076;&#1088;&#1091;&#1075;_&#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;?">&#1052;&#1080;&#1075;&#1088;&#1080;&#1088;&#1072;&#1085;&#1077; &#1086;&#1090; &#1076;&#1088;&#1091;&#1075; &#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;?</span></h3>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112173450
+Cached time: 20260112173808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.172 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.150 seconds
 Preprocessor visited node count: 293/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -151,17 +151,17 @@ Unstrip post&#8208;expand size: 4273/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.479      1 -total
- 45.35%    7.020      1 Template:Userdocnavi/bg
- 20.51%    3.175      1 Template:Navigation_menu_2
- 11.74%    1.817      7 Template:Incode
- 11.23%    1.739      1 Template:TOCright
-  9.29%    1.438      2 Template:VersionMinus
-  7.53%    1.165      3 Template:Version
-  6.78%    1.050      1 Template:Button
+100.00%   18.295      1 -total
+ 36.73%    6.719      1 Template:Userdocnavi/bg
+ 18.45%    3.375      3 Template:Version
+ 13.96%    2.553      1 Template:Navigation_menu_2
+ 12.20%    2.232      1 Template:TOCright
+ 10.37%    1.898      1 Template:Button
+  9.87%    1.806      7 Template:Incode
+  7.45%    1.363      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260112173450 and revision id 1737598. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260112173807 and revision id 1737600. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
