--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -1,13 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Preferences Editor/bg</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="bg" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Preferences+Editor&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (7% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="../de/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="Voreinstellungseditor (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--complete" title="Voreinstellungseditor (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Preferences_Editor.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Preferences Editor (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Se&ccedil;enekler Penceresi (5% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de preferencias (11% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="R&eacute;glage des pr&eacute;f&eacute;rences (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Ure&#273;iva&#269; postavki (3% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--med" title="Impostare le preferenze (49% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--high" title="Edytor ustawie&#324; (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--complete" title="Edytor ustawie&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Editor de prefer&ecirc;ncias (8% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--med" title="Editor de Prefer&ecirc;ncias (27% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Preferences_Editor.html" class="mw-pt-progress mw-pt-progress--low" title="Preferences Editor (5% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -1253,35 +1253,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210137
+Cached time: 20260112174047
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.221 seconds
-Real time usage: 0.562 seconds
+CPU time usage: 0.220 seconds
+Real time usage: 0.290 seconds
 Preprocessor visited node count: 2435/1000000
 Post&#8208;expand include size: 24089/2097152 bytes
 Template argument size: 8058/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4094/5000000 bytes
+Unstrip post&#8208;expand size: 4104/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  139.161      1 -total
- 15.84%   22.043      1 Template:Userdocnavi/bg
- 12.45%   17.322     11 Template:Value
-  9.61%   13.378      3 Template:PropertyView
-  8.88%   12.358     11 Template:Incode
-  7.77%   10.813      2 Template:Docnav
-  7.09%    9.860     41 Template:Version
-  6.90%    9.608      3 Template:Variable
-  6.78%    9.437    225 Template:MenuCommand
-  6.65%    9.256      2 Template:VersionMinus
+100.00%   67.992      1 -total
+ 15.52%   10.554      1 Template:Userdocnavi/bg
+ 12.38%    8.415    225 Template:MenuCommand
+ 11.09%    7.539     11 Template:Value
+  9.88%    6.718      3 Template:PropertyView
+  5.01%    3.405      3 Template:Variable
+  4.72%    3.207     41 Template:Version
+  4.62%    3.141      1 Template:Navigation_menu_2
+  4.20%    2.858     11 Template:Incode
+  4.07%    2.766     15 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260111210137 and revision id 1736294. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260112174047 and revision id 1736294. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
