--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -1253,12 +1253,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112174047
+Cached time: 20260112174102
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.220 seconds
-Real time usage: 0.290 seconds
+CPU time usage: 0.222 seconds
+Real time usage: 0.291 seconds
 Preprocessor visited node count: 2435/1000000
 Post&#8208;expand include size: 24089/2097152 bytes
 Template argument size: 8058/2097152 bytes
@@ -1269,19 +1269,19 @@ Unstrip post&#8208;expand size: 4104/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.992      1 -total
- 15.52%   10.554      1 Template:Userdocnavi/bg
- 12.38%    8.415    225 Template:MenuCommand
- 11.09%    7.539     11 Template:Value
-  9.88%    6.718      3 Template:PropertyView
-  5.01%    3.405      3 Template:Variable
-  4.72%    3.207     41 Template:Version
-  4.62%    3.141      1 Template:Navigation_menu_2
-  4.20%    2.858     11 Template:Incode
-  4.07%    2.766     15 Template:FileName
+100.00%   57.108      1 -total
+ 15.39%    8.787    225 Template:MenuCommand
+ 12.57%    7.180      1 Template:Userdocnavi/bg
+ 10.32%    5.895     11 Template:Value
+  7.57%    4.322      3 Template:PropertyView
+  5.05%    2.884      1 Template:Navigation_menu_2
+  4.72%    2.697     41 Template:Version
+  4.51%    2.578     11 Template:Incode
+  4.46%    2.545      3 Template:Variable
+  3.82%    2.182      9 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260112174047 and revision id 1736294. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260112174102 and revision id 1736294. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
