Created page with "==Въведение=="

--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -28,7 +28,9 @@
     <div><a href="../bg/Online_Help_Toc.html" title="Online Help Toc/bg">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <div class="mw-translate-fuzzy">
 <p>&#1052;&#1086;&#1078;&#1077; &#1076;&#1072; &#1085;&#1072;&#1084;&#1077;&#1088;&#1080;&#1090;&#1077; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;&#1072; &#1085;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;&#1090;&#1077; &#1085;&#1072; FreeCAD &#1074; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; Edit &rarr; Preferences.
 </p>
@@ -1253,13 +1255,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112174102
+Cached time: 20260112174123
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.222 seconds
-Real time usage: 0.291 seconds
-Preprocessor visited node count: 2435/1000000
+CPU time usage: 0.236 seconds
+Real time usage: 0.301 seconds
+Preprocessor visited node count: 2436/1000000
 Post&#8208;expand include size: 24089/2097152 bytes
 Template argument size: 8058/2097152 bytes
 Highest expansion depth: 7/100
@@ -1269,19 +1271,19 @@ Unstrip post&#8208;expand size: 4104/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.108      1 -total
- 15.39%    8.787    225 Template:MenuCommand
- 12.57%    7.180      1 Template:Userdocnavi/bg
- 10.32%    5.895     11 Template:Value
-  7.57%    4.322      3 Template:PropertyView
-  5.05%    2.884      1 Template:Navigation_menu_2
-  4.72%    2.697     41 Template:Version
-  4.51%    2.578     11 Template:Incode
-  4.46%    2.545      3 Template:Variable
-  3.82%    2.182      9 Template:Button
+100.00%   61.186      1 -total
+ 15.32%    9.373    225 Template:MenuCommand
+ 12.00%    7.340      1 Template:Userdocnavi/bg
+ 11.94%    7.307     11 Template:Value
+  6.51%    3.981      3 Template:PropertyView
+  5.39%    3.298     11 Template:Incode
+  5.31%    3.248      1 Template:Navigation_menu_2
+  4.64%    2.837     41 Template:Version
+  3.94%    2.408      9 Template:Button
+  3.68%    2.250      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260112174102 and revision id 1736294. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260112174122 and revision id 1737604. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
