--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -31,11 +31,9 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
-<div class="mw-translate-fuzzy">
-<p>&#1047;&#1072; &#1076;&#1072; &#1086;&#1090;&#1074;&#1086;&#1088;&#1080;&#1090;&#1077; <b>&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;</b> &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; <b>Edit &rarr; Preferences...</b> &#1086;&#1090; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; &#1080;&#1083;&#1080; (<span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>) &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1081;&#1090;&#1077; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096;&#1085;&#1072;&#1090;&#1072; &#1082;&#1086;&#1084;&#1073;&#1080;&#1085;&#1072;&#1094;&#1080;&#1103; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>}
+<p>&#1047;&#1072; &#1076;&#1072; &#1086;&#1090;&#1074;&#1086;&#1088;&#1080;&#1090;&#1077; <b>&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;</b> &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; <b>Edit &rarr; Preferences...</b> &#1086;&#1090; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; &#1080;&#1083;&#1080; (<span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>) &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1081;&#1090;&#1077; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096;&#1085;&#1072;&#1090;&#1072; &#1082;&#1086;&#1084;&#1073;&#1080;&#1085;&#1072;&#1094;&#1080;&#1103; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>
 +<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">,</span>. &#1053;&#1072; macOS &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; <b>Preferences...</b> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1074; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; <b>FreeCAD</b> &#1074;&#1084;&#1077;&#1089;&#1090;&#1086; &#1074; Edit (&#1090;&#1086;&#1074;&#1072; &#1077; &#1084;&#1103;&#1089;&#1090;&#1086;&#1090;&#1086; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1079;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103; &#1085;&#1072; Mac).
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>FreeCAD &#1077; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083;&#1077;&#1085; &#1085;&#1072; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080;, &#1074;&#1089;&#1077;&#1082;&#1080; &#1084;&#1086;&#1076;&#1091;&#1083; &#1086;&#1090;&#1075;&#1086;&#1074;&#1086;&#1088;&#1077;&#1085; &#1079;&#1072; &#1077;&#1076;&#1080;&#1085; <a href="../bg/Workbenches.html" title="Workbenches/bg">&#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085; &#1087;&#1083;&#1086;&#1090;</a>. &#1057;&#1098;&#1097;&#1086; &#1090;&#1072;&#1082;&#1072; FreeCAD &#1079;&#1072;&#1088;&#1077;&#1078;&#1076;&#1072; &#1074;&#1089;&#1077;&#1082;&#1080; &#1084;&#1086;&#1076;&#1091;&#1083; &#1095;&#1072;&#1082; &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1079;&#1072;&#1087;&#1086;&#1095;&#1085;&#1077;&#1090;&#1077; &#1076;&#1072; &#1075;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077;. &#1058;&#1086;&#1074;&#1072; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1080; &#1079;&#1072;&#1088;&#1077;&#1078;&#1076;&#1072;&#1085;&#1077; &#1085;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;&#1090;&#1077; &#1079;&#1072; &#1084;&#1086;&#1076;&#1091;&#1083;&#1072; &#1095;&#1072;&#1082; &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1079;&#1072;&#1087;&#1086;&#1095;&#1085;&#1077;&#1090;&#1077; &#1076;&#1072; &#1075;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077;.
 </p>
@@ -1256,13 +1254,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112174556
+Cached time: 20260112174737
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.197 seconds
-Real time usage: 0.261 seconds
-Preprocessor visited node count: 2476/1000000
+CPU time usage: 0.208 seconds
+Real time usage: 0.398 seconds
+Preprocessor visited node count: 2475/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
 Highest expansion depth: 7/100
@@ -1272,19 +1270,19 @@ Unstrip post&#8208;expand size: 4104/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.135      1 -total
- 15.08%    8.165    228 Template:MenuCommand
- 10.90%    5.901      1 Template:Userdocnavi/bg
-  7.19%    3.895     11 Template:Value
-  7.09%    3.838      3 Template:PropertyView
-  6.26%    3.390      2 Template:Docnav
-  5.96%    3.225      1 Template:TOCright
-  5.37%    2.906      1 Template:Navigation_menu_2
-  4.81%    2.606     42 Template:Version
-  3.92%    2.122      3 Template:Variable
+100.00%   98.924      1 -total
+ 23.93%   23.670      1 Template:Userdocnavi/bg
+  9.06%    8.962     11 Template:Value
+  8.52%    8.429     15 Template:FileName
+  7.92%    7.839    228 Template:MenuCommand
+  6.92%    6.843      1 Template:Navigation_menu_2
+  6.83%    6.760     11 Template:Incode
+  6.38%    6.312      2 Template:VersionMinus
+  4.14%    4.097      3 Template:PropertyView
+  3.16%    3.123      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260112174555 and revision id 1737608. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260112174736 and revision id 1737610. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
