--- a/wiki/Macro_CSV2Objects.html
+++ b/wiki/Macro_CSV2Objects.html
@@ -151,6 +151,7 @@ webbrowser.open("https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p><b>Macro CSV2Objects</b>
 </p>
+<pre>print("test")</pre>
 <div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
 <div style="border:1px outset #9eb4b5; background:#f0fdf8; margin:5px; padding:5px; white-space:nowrap; -webkit-border-radius: 5px; -moz-border-radius: 5px;">
 <p><span typeof="mw:File"><a href="https://github.com/DasLukas/CSV2Objects/raw/main/CSV2Objects.FCMacro" rel="nofollow"><img src="File/Nuvola_apps_download_manager.png" decoding="async" width="35" height="35" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
@@ -162,29 +163,30 @@ webbrowser.open("https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260109144534
+Cached time: 20260112175720
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.188 seconds
-Preprocessor visited node count: 133/1000000
-Post&#8208;expand include size: 2705/2097152 bytes
-Template argument size: 687/2097152 bytes
+CPU time usage: 0.063 seconds
+Real time usage: 0.072 seconds
+Preprocessor visited node count: 140/1000000
+Post&#8208;expand include size: 2767/2097152 bytes
+Template argument size: 700/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1678/5000000 bytes
+Unstrip post&#8208;expand size: 1702/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.648      1 -total
- 53.21%   11.520      1 Template:Macro
- 23.34%    5.052      1 Template:Codeextralink
- 22.48%    4.866      1 Template:CodeDownload
+100.00%    7.283      1 -total
+ 32.25%    2.349      1 Template:Macro
+ 28.35%    2.065      1 Template:CodeDownload
+ 19.90%    1.449      1 Template:Codeextralink
+ 16.22%    1.181      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409284-0!canonical and timestamp 20260109144534 and revision id 1730050. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409284-0!canonical and timestamp 20260112175729 and revision id 1737621. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
