--- a/wiki/Macro_CSV2Objects.html
+++ b/wiki/Macro_CSV2Objects.html
@@ -162,12 +162,12 @@ webbrowser.open("https://raw.githubusercontent.com/DasLukas/CSV2Objects/main/CSV
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260112180150
+Cached time: 20260112180220
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.053 seconds
-Real time usage: 0.068 seconds
+CPU time usage: 0.060 seconds
+Real time usage: 0.078 seconds
 Preprocessor visited node count: 133/1000000
 Post&#8208;expand include size: 2705/2097152 bytes
 Template argument size: 687/2097152 bytes
@@ -178,13 +178,13 @@ Unstrip post&#8208;expand size: 1678/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.074      1 -total
- 49.11%    3.965      1 Template:Macro
- 26.63%    2.150      1 Template:Codeextralink
- 22.01%    1.777      1 Template:CodeDownload
+100.00%   10.222      1 -total
+ 34.94%    3.572      1 Template:Codeextralink
+ 34.40%    3.516      1 Template:Macro
+ 27.88%    2.850      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409284-0!canonical and timestamp 20260112180152 and revision id 1737624. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409284-0!canonical and timestamp 20260112180220 and revision id 1737624. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
