Updated page Macro Multi Export

--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -99,8 +99,7 @@ Macro Multi Export
 <li>Enter a base filename (the format extension will be appended automatically).</li>
 <li>Optionally adjust mesh tolerance settings for mesh-based formats.</li></ul></li>
 <li>Click "Export" to create the files.</li></ol>
-<p><span typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260106014550&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="568" class="mw-file-element" data-file-width="1002" data-file-height="1424"></a></span>
-</p>
+<figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260106014550&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="568" class="mw-file-element" data-file-width="1002" data-file-height="1424"></a><figcaption></figcaption></figure>
 <h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
 <ul><li>FreeCAD 0.21 or later</li>
 <li>Objects with solid shapes (Part or PartDesign bodies)</li></ul>
@@ -136,12 +135,12 @@ Macro Multi Export
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260112185549
+Cached time: 20260112185722
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.028 seconds
-Real time usage: 0.030 seconds
+CPU time usage: 0.027 seconds
+Real time usage: 0.048 seconds
 Preprocessor visited node count: 143/1000000
 Post&#8208;expand include size: 3192/2097152 bytes
 Template argument size: 1112/2097152 bytes
@@ -152,13 +151,13 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.005      1 -total
- 51.06%    2.045      1 Template:Macro
- 22.42%    0.898      3 Template:FileName
- 20.82%    0.834      1 Template:CodeDownload
+100.00%    7.369      1 -total
+ 44.85%    3.305      1 Template:Macro
+ 26.02%    1.917      3 Template:FileName
+ 23.80%    1.754      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260112185625 and revision id 1737627. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260112185722 and revision id 1737628. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
