Updated page FeaturePython Custom Properties/fr

--- a/wiki/fr/FeaturePython_Custom_Properties.html
+++ b/wiki/fr/FeaturePython_Custom_Properties.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FeaturePython Custom Properties/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-FeaturePython+Custom+Properties&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--med" title="FeaturePython Benutzerdefinierte Eigenschaften (56% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--med" title="FeaturePython Benutzerdefinierte Eigenschaften (60% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FeaturePython_Custom_Properties.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FeaturePython Custom Properties (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="Propriet&agrave; personalizzate FeaturePython (1% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--high" title="W&#322;a&#347;ciwo&#347;ci niestandardowe funkcji Python (97% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--complete" title="W&#322;a&#347;ciwo&#347;ci niestandardowe funkcji Python (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="&#1057;&#1087;&#1080;&#1089;&#1086;&#1082; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074; FeaturePython (1% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="FeaturePython &#12459;&#12473;&#12479;&#12512;&#12503;&#12525;&#12497;&#12486;&#12451;&#12540; (1% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -20,10 +20,8 @@
 <p><span id="Creating_a_FeaturePython_object_and_adding_a_property_to_it"></span>
 </p>
 <h2><span id="Cr.C3.A9er_un_objet_FeaturePython_et_lui_ajouter_une_propri.C3.A9t.C3.A9"></span><span class="mw-headline" id="Cr&eacute;er_un_objet_FeaturePython_et_lui_ajouter_une_propri&eacute;t&eacute;"><span id="Creating"> Cr&eacute;er un objet FeaturePython et lui ajouter une propri&eacute;t&eacute;</span></span></h2>
-<div class="mw-translate-fuzzy">
-<p>Ce code cr&eacute;era un objet avec le nom interne <code>InternalObjectName</code> (automatiquement renomm&eacute; en <code>InternalObjectName001</code> et ainsi de suite, si un objet nomm&eacute; <code>InternalObjectName</code> existe d&eacute;j&agrave;) et lui affectera l'&eacute;tiquette personnalis&eacute;e <code>User-friendly label</code>. Cette &eacute;tiquette sera affich&eacute;e dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">Vue en arborescence</a>. Les <a href="../fr/Expressions.html" title="Expressions/fr">Expressions</a> peuvent faire r&eacute;f&eacute;rence &agrave; cet objet par son &eacute;tiquette en utilisant <code>&lt;&lt;User-friendly label&gt;&gt;</code>.
+<p>Ce code cr&eacute;era un objet avec le nom interne <code>InternalObjectName</code> (automatiquement renomm&eacute; en <code>InternalObjectName001</code> et ainsi de suite, si un objet nomm&eacute; <code>InternalObjectName</code> existe d&eacute;j&agrave;) et lui affectera l'&eacute;tiquette personnalis&eacute;e <code>User-friendly label</code>. Cette &eacute;tiquette sera affich&eacute;e dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Les <a href="../fr/Expressions.html" title="Expressions/fr">expressions</a> peuvent faire r&eacute;f&eacute;rence &agrave; cet objet par son &eacute;tiquette en utilisant <code>&lt;&lt;User-friendly label&gt;&gt;</code>.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
 </pre></div>
@@ -1076,33 +1074,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205918
+Cached time: 20260112214135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.347 seconds
-Real time usage: 1.163 seconds
-Preprocessor visited node count: 2892/1000000
+CPU time usage: 0.301 seconds
+Real time usage: 1.049 seconds
+Preprocessor visited node count: 2891/1000000
 Post&#8208;expand include size: 23353/2097152 bytes
 Template argument size: 35604/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 95/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 154085/5000000 bytes
+Unstrip post&#8208;expand size: 154090/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  317.393      1 -total
- 63.69%  202.154     95 Template:Code
- 12.19%   38.675      1 Template:Userdocnavi/fr
-  8.89%   28.218     43 Template:Version/fr
-  3.35%   10.633     42 Template:Incode
-  3.01%    9.562    234 Template:TODO
-  2.32%    7.375      1 Template:Navigation_menu_2
-  1.60%    5.073      1 Template:TOCright
+100.00%  757.035      1 -total
+ 95.85%  725.641     95 Template:Code
+  0.66%    5.026      1 Template:Userdocnavi/fr
+  0.45%    3.429     42 Template:Incode
+  0.44%    3.317     43 Template:Version/fr
+  0.32%    2.419    234 Template:TODO
+  0.29%    2.200      1 Template:Navigation_menu_2
+  0.18%    1.397      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260111205916 and revision id 1736241. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214134 and revision id 1737749. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
