Updated page FeaturePython Custom Properties/fr

--- a/wiki/fr/FeaturePython_Custom_Properties.html
+++ b/wiki/fr/FeaturePython_Custom_Properties.html
@@ -139,11 +139,8 @@
 <p><span style="font-size:small;"><a href="../fr/Release_notes_0.21.html" title="Release notes 0.21/fr">introduit dans la version 0.21</a></span>
 </p>
 <h2><span class="mw-headline" id="App::PropertyDistance">App::PropertyDistance</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Une propri&eacute;t&eacute; de distance. Elle peut contenir une valeur <code>distance</code> positive, n&eacute;gative ou nulle. Utilisez le param&egrave;tre "Value" de la propri&eacute;t&eacute; pour obtenir la valeur sous forme de nombre flottant. La valeur est toujours en mm, mais dans l'<a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, elle est pr&eacute;sent&eacute;e avec les unit&eacute;s des pr&eacute;f&eacute;rences. Pour plus de d&eacute;tails, voir la section <a href="#Creating">Cr&eacute;er un objet FeaturePython et lui ajouter une propri&eacute;t&eacute;</a>.
-</p>
-</div>
-<p><a href="#App::PropertyLength">App::PropertyLength</a> est une propri&eacute;t&eacute; similaire qui ne peut pas contenir de valeur n&eacute;gative.
+<p>Une propri&eacute;t&eacute; de distance. Elle peut contenir une valeur <code>distance</code> positive, n&eacute;gative ou nulle. Utilisez le param&egrave;tre "Value" de la propri&eacute;t&eacute; pour obtenir la valeur sous forme de nombre flottant. La valeur est toujours en mm, mais dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, elle est pr&eacute;sent&eacute;e avec les unit&eacute;s des pr&eacute;f&eacute;rences. Pour plus de d&eacute;tails, voir la section <a href="#Creating">Cr&eacute;er un objet FeaturePython et lui ajouter une propri&eacute;t&eacute;</a>.
+</p><p><a href="#App::PropertyLength">App::PropertyLength</a> est une propri&eacute;t&eacute; similaire qui ne peut pas contenir de valeur n&eacute;gative.
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
@@ -1072,13 +1069,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112214601
+Cached time: 20260112214618
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.332 seconds
-Real time usage: 0.463 seconds
-Preprocessor visited node count: 2890/1000000
+CPU time usage: 0.317 seconds
+Real time usage: 0.402 seconds
+Preprocessor visited node count: 2889/1000000
 Post&#8208;expand include size: 23353/2097152 bytes
 Template argument size: 35604/2097152 bytes
 Highest expansion depth: 5/100
@@ -1088,17 +1085,17 @@ Unstrip post&#8208;expand size: 154090/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.599      1 -total
- 51.62%   36.958     95 Template:Code
-  7.35%    5.266      1 Template:Userdocnavi/fr
-  4.77%    3.417     43 Template:Version/fr
-  3.90%    2.789     42 Template:Incode
-  3.58%    2.560      1 Template:Navigation_menu_2
-  3.21%    2.295    234 Template:TODO
-  2.72%    1.949      1 Template:TOCright
+100.00%   78.421      1 -total
+ 53.05%   41.604     95 Template:Code
+  9.89%    7.752      1 Template:Userdocnavi/fr
+  5.81%    4.555      1 Template:Navigation_menu_2
+  4.88%    3.830     43 Template:Version/fr
+  4.10%    3.215     42 Template:Incode
+  3.35%    2.629    234 Template:TODO
+  1.86%    1.461      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214601 and revision id 1737751. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214618 and revision id 1737753. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
