Updated page FeaturePython Custom Properties/fr

--- a/wiki/fr/FeaturePython_Custom_Properties.html
+++ b/wiki/fr/FeaturePython_Custom_Properties.html
@@ -1070,8 +1070,8 @@ Cached time: 20260112214714
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.303 seconds
-Real time usage: 0.366 seconds
+CPU time usage: 0.310 seconds
+Real time usage: 0.357 seconds
 Preprocessor visited node count: 2888/1000000
 Post&#8208;expand include size: 23353/2097152 bytes
 Template argument size: 35604/2097152 bytes
@@ -1082,17 +1082,17 @@ Unstrip post&#8208;expand size: 154090/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.990      1 -total
- 54.93%   32.950     95 Template:Code
-  7.36%    4.417      1 Template:Userdocnavi/fr
-  3.99%    2.391     43 Template:Version/fr
-  3.74%    2.245      1 Template:Navigation_menu_2
-  3.65%    2.188    234 Template:TODO
-  3.45%    2.068     42 Template:Incode
-  1.48%    0.885      1 Template:TOCright
+100.00%   82.363      1 -total
+ 53.23%   43.844     95 Template:Code
+  6.26%    5.153      1 Template:Userdocnavi/fr
+  5.25%    4.323     43 Template:Version/fr
+  4.70%    3.871     42 Template:Incode
+  3.44%    2.834      1 Template:Navigation_menu_2
+  3.41%    2.808    234 Template:TODO
+  2.08%    1.711      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214714 and revision id 1737757. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214713 and revision id 1737757. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
